package com.thoughtworks.training.java.di2springboot;

public interface Greeter {
    String greet(String name);
}
